tests/ui/generic-associated-types/issue-74824.next.stderr
error[E0277]: the trait bound `Box<T>: Copy` is not satisfied
  --> $DIR/issue-74824.rs:10:26
   |
LL |     type Copy<T>: Copy = Box<T>;
   |                          ^^^^^^ the trait `Copy` is not implemented for `Box<T>`
   |
note: required by a bound in `UnsafeCopy::Copy`
  --> $DIR/issue-74824.rs:10:19
   |
LL |     type Copy<T>: Copy = Box<T>;
   |                   ^^^^ required by this bound in `UnsafeCopy::Copy`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
